# fullstack-freelance

./: README.md
backend/: .pyproject.toml.swp  =20.1.0  Pipfile  README.md  pyproject.toml  pyproject.toml.save  requirements.txt  requiremnts.txt
backend/app/: __init__.py  auth.py  config.py  models.py  requirements.txt  resources.py  run.py  seed.py
backend/instance/: app.db
backend/migrations/versions/: bc5e59e2aea5_initial_migration.py  e081cbf9a656_initial_migration.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: axios.jsx
frontend/src/components/: AdminPanel.jsx  ApplicationCard.jsx  AuthContext.jsx  Dashboard.jsx  HireFreelancer.jsx  LandingPage.jsx  Login.jsx  MyApplications.jsx  NavBar.jsx  PostProject.jsx  Profile.jsx  ProtectedRoute.jsx  ResetPassword.jsx  ServiceDetails.jsx  Services.jsx  SidebarLayout.jsx  Signup.jsx  Unauthorized.jsx
