[tool.poetry]
name = "freelance-backend"
version = "0.1.0"
description = "Flask backend for the freelance-fullstack application"
authors = ["marylyne <otienomarylyne76@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8 || ^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
